fix: :sparkles: Refactor CSS styles, update button visibility, and enhance archive functionality in HTML and JS

--- a/css/style_info_srv.css
+++ b/css/style_info_srv.css
@@ -1,17 +1,25 @@
-.info_srv{
+.info_srv {
     margin-top: 6em;
 }
-h1{
+
+h1 {
     margin-top: 6em;
 }
+
 /* * {
     outline: 1px solid red;
 } */
 
-.Button-envoie button{
+.Button-envoie button {
     margin-top: 1.5em !important;
 }
+
 .row>* {
     padding-left: 0 !important;
     padding-right: 0 !important;
+}
+
+.custom-hidden {
+
+    display: none;
 }
